@@ -1,3 +1,8 @@
+2018-09-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/ci/Dockerfile: Move Dockerfile to docker/ci
+	* docker/run/Dockerfile: Add deployment Dockerfile
+
 2018-09-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Switch to rcpp/rcpp-testing container
